<?xml version="1.0" encoding="utf-8"?>
<!--we're using here linear layout for simple vertical orientation in the placement of the items
no need to add relative positioning such in constraint layout-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/instructionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/instructions"
        android:textAlignment="center"
        android:textSize="@dimen/size_28sp" />

    <TextView
        android:id="@+id/navigatingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto"
        android:text="@string/instructionsEnding"
        android:textAlignment="center"
        android:textSize="@dimen/size_18sp" />

    <Button
        android:id="@+id/navButton_InstructionLayout"
        style="@style/AppTheme.Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:text="@string/okey"
        android:textSize="@dimen/size_18sp" />

</LinearLayout>