<?xml version="1.0" encoding="utf-8"?>
<!--The structure of the xml is very simple with 2 TextViews and a button there's no need for complexity
linear layout with vertical orientation would be more than enough for that layout-->
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/instructionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="140dp"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/roboto"
            android:text="@string/welcomingText"
            android:textAlignment="center"
            android:textSize="@dimen/size_28sp" />

        <TextView
            android:id="@+id/navigatingTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/roboto"
            android:text="@string/navToInstructions"
            android:textAlignment="center"
            android:textSize="@dimen/size_18sp" />

        <Button
            android:id="@+id/navButtonInstructionLayout"
            style="@style/AppTheme.Buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="@string/instructionTitle"
            android:textSize="@dimen/size_18sp" />

</LinearLayout>