<?xml version="1.0" encoding="utf-8"?>
<!--here Constraint Layout is used to position the items relatively it's better than linearlayout
in case of performance in this case-->
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context= ".screens.login.LoginFragment">

        <Button
            android:id="@+id/login_button"
            style="@style/AppTheme.Buttons"
            android:layout_width="138dp"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:background="@color/colorAccent"
            android:text="@string/login"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/register_Button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
            app:layout_constraintVertical_bias="0.04000002" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="92dp"
            android:fontFamily="@font/roboto"
            android:text="@string/email"
            android:textSize="@dimen/size_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailEntry"
            android:layout_width="330dp"
            android:layout_height="53dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="42dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.456"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_TextView"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/password_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:text="@string/password"
            android:textSize="@dimen/size_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEntry" />

        <Button
            android:id="@+id/register_Button"
            style="@style/AppTheme.Buttons"
            android:layout_width="132dp"
            android:layout_height="48dp"
            android:background="@color/colorAccent"
            android:fontFamily="@font/roboto"
            android:text="@string/register"
            android:textSize="@dimen/size_18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/login_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>