<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.udacity.shoestore.screens.listingFragment.ListingViewModel"/>
    </data>
<!--The linear layout would fit that kind of case to place elements vertically but constraint
layout can also apply the same job as the a lot of elements can be placed relatively-->
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/shoeName_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="283dp"
        android:fontFamily="@font/roboto"
        android:text="@string/shoeName"
        android:textSize="@dimen/size_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancel_Button"
        style="@style/AppTheme.Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="60dp"
        android:background="@color/colorAccent"
        android:text="@string/cancel"
        android:textSize="@dimen/size_18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/describtion_Entry" />

    <Button
        android:id="@+id/done_Button"
        style="@style/AppTheme.Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="72dp"
        android:background="@color/colorAccent"
        android:text="@string/done"
        android:textSize="@dimen/size_18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/cancel_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel_Button" />

    <TextView
        android:id="@+id/company_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/company"
        android:textSize="@dimen/size_18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoeName_Entry" />

    <TextView
        android:id="@+id/size_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="195dp"
        android:layout_marginEnd="95dp"
        android:text="@string/size"
        android:textSize="@dimen/size_18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/company_TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/company_TextView" />

    <TextView
        android:id="@+id/dscribtion_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="12dp"
        android:text="@string/description"
        android:textSize="@dimen/size_18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_Entry" />

    <EditText
        android:id="@+id/shoeName_Entry"
        android:layout_width="350dp"
        android:layout_height="@dimen/size_50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/shoeName"
        android:text="@={vm.shoe.name}"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoeName_TextView"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/company_Entry"
        android:text="@={vm.shoe.company}"
        android:layout_width="237dp"
        android:layout_height="@dimen/size_50dp"
        android:layout_marginTop="10dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/company"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/size_Entry"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_TextView"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/size_Entry"
        android:layout_width="95dp"
        android:text="@={vm.shoe.size}"
        android:layout_height="@dimen/size_50dp"
        android:ems="10"
        android:hint="@string/size"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/company_Entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/company_Entry"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/describtion_Entry"
        android:layout_width="350dp"
        android:layout_height="132dp"
        android:layout_marginTop="10dp"
        android:autofillHints="name"
        android:ems="10"
        android:gravity="start"
        android:text="@={vm.shoe.description}"
        android:hint="@string/description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dscribtion_TextView"
        tools:ignore="DuplicateSpeakableTextCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
